--- a/tex/thesis.bib
+++ b/tex/thesis.bib
@@ -43,4 +43,9 @@ journal = {Physical Review
 Letters 105, 260602},
 year = {2010}
 }
+@book{book,
+author = "Allen Tildesley",
+title = "Computer Simulation of Liquids",
+year  = 1991
+}
 
